tests/ui/parser/float-field.stderr
error: expected at least one digit in exponent
  --> $DIR/float-field.rs:14:9
   |
LL |     { s.1e+; }
   |         ^^^

error: expected at least one digit in exponent
  --> $DIR/float-field.rs:18:9
   |
LL |     { s.1e-; }
   |         ^^^

error: hexadecimal float literal is not supported
  --> $DIR/float-field.rs:36:9
   |
LL |     { s.0x1.; }
   |         ^^^^

error: hexadecimal float literal is not supported
  --> $DIR/float-field.rs:40:9
   |
LL |     { s.0x1.1; }
   |         ^^^^^

error: hexadecimal float literal is not supported
  --> $DIR/float-field.rs:43:9
   |
LL |     { s.0x1.1e1; }
   |         ^^^^^^^

error: hexadecimal float literal is not supported
  --> $DIR/float-field.rs:54:9
   |
LL |     { s.0x1.1e+1; }
   |         ^^^^^^^^

error: hexadecimal float literal is not supported
  --> $DIR/float-field.rs:58:9
   |
LL |     { s.0x1.1e-1; }
   |         ^^^^^^^^

error: expected at least one digit in exponent
  --> $DIR/float-field.rs:72:9
   |
LL |     { s.1e+f32; }
   |         ^^^^^^

error: expected at least one digit in exponent
  --> $DIR/float-field.rs:76:9
   |
LL |     { s.1e-f32; }
   |         ^^^^^^

error: unexpected token: `;`
  --> $DIR/float-field.rs:8:11
   |
LL |     { s.1.; }
   |           ^

error: unexpected token: `1e+`
  --> $DIR/float-field.rs:14:9
   |
LL |     { s.1e+; }
   |         ^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `1e+`
  --> $DIR/float-field.rs:14:9
   |
LL |     { s.1e+; }
   |         ^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error: unexpected token: `1e-`
  --> $DIR/float-field.rs:18:9
   |
LL |     { s.1e-; }
   |         ^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `1e-`
  --> $DIR/float-field.rs:18:9
   |
LL |     { s.1e-; }
   |         ^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error: unexpected token: `1e+1`
  --> $DIR/float-field.rs:22:9
   |
LL |     { s.1e+1; }
   |         ^^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `1e+1`
  --> $DIR/float-field.rs:22:9
   |
LL |     { s.1e+1; }
   |         ^^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error: unexpected token: `1e-1`
  --> $DIR/float-field.rs:25:9
   |
LL |     { s.1e-1; }
   |         ^^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `1e-1`
  --> $DIR/float-field.rs:25:9
   |
LL |     { s.1e-1; }
   |         ^^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error: unexpected token: `1.1e+1`
  --> $DIR/float-field.rs:28:9
   |
LL |     { s.1.1e+1; }
   |         ^^^^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `1.1e+1`
  --> $DIR/float-field.rs:28:9
   |
LL |     { s.1.1e+1; }
   |         ^^^^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error: unexpected token: `1.1e-1`
  --> $DIR/float-field.rs:31:9
   |
LL |     { s.1.1e-1; }
   |         ^^^^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `1.1e-1`
  --> $DIR/float-field.rs:31:9
   |
LL |     { s.1.1e-1; }
   |         ^^^^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error: unexpected token: `;`
  --> $DIR/float-field.rs:36:13
   |
LL |     { s.0x1.; }
   |             ^

error: expected expression, found `;`
  --> $DIR/float-field.rs:46:14
   |
LL |     { s.0x1e+; }
   |              ^ expected expression

error: expected expression, found `;`
  --> $DIR/float-field.rs:48:14
   |
LL |     { s.0x1e-; }
   |              ^ expected expression

error: unexpected token: `0x1.1e+1`
  --> $DIR/float-field.rs:54:9
   |
LL |     { s.0x1.1e+1; }
   |         ^^^^^^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `0x1.1e+1`
  --> $DIR/float-field.rs:54:9
   |
LL |     { s.0x1.1e+1; }
   |         ^^^^^^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error: unexpected token: `0x1.1e-1`
  --> $DIR/float-field.rs:58:9
   |
LL |     { s.0x1.1e-1; }
   |         ^^^^^^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `0x1.1e-1`
  --> $DIR/float-field.rs:58:9
   |
LL |     { s.0x1.1e-1; }
   |         ^^^^^^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error: suffixes on a tuple index are invalid
  --> $DIR/float-field.rs:62:9
   |
LL |     { s.1e1f32; }
   |         ^^^^^^ invalid suffix `f32`

error: suffixes on a tuple index are invalid
  --> $DIR/float-field.rs:67:9
   |
LL |     { s.1.1f32; }
   |         ^^^^^^ invalid suffix `f32`

error: suffixes on a tuple index are invalid
  --> $DIR/float-field.rs:69:9
   |
LL |     { s.1.1e1f32; }
   |         ^^^^^^^^ invalid suffix `f32`

error: unexpected token: `1e+f32`
  --> $DIR/float-field.rs:72:9
   |
LL |     { s.1e+f32; }
   |         ^^^^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `1e+f32`
  --> $DIR/float-field.rs:72:9
   |
LL |     { s.1e+f32; }
   |         ^^^^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error: unexpected token: `1e-f32`
  --> $DIR/float-field.rs:76:9
   |
LL |     { s.1e-f32; }
   |         ^^^^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `1e-f32`
  --> $DIR/float-field.rs:76:9
   |
LL |     { s.1e-f32; }
   |         ^^^^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error: unexpected token: `1e+1f32`
  --> $DIR/float-field.rs:80:9
   |
LL |     { s.1e+1f32; }
   |         ^^^^^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `1e+1f32`
  --> $DIR/float-field.rs:80:9
   |
LL |     { s.1e+1f32; }
   |         ^^^^^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error: unexpected token: `1e-1f32`
  --> $DIR/float-field.rs:83:9
   |
LL |     { s.1e-1f32; }
   |         ^^^^^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `1e-1f32`
  --> $DIR/float-field.rs:83:9
   |
LL |     { s.1e-1f32; }
   |         ^^^^^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error: unexpected token: `1.1e+1f32`
  --> $DIR/float-field.rs:86:9
   |
LL |     { s.1.1e+1f32; }
   |         ^^^^^^^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `1.1e+1f32`
  --> $DIR/float-field.rs:86:9
   |
LL |     { s.1.1e+1f32; }
   |         ^^^^^^^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error: unexpected token: `1.1e-1f32`
  --> $DIR/float-field.rs:89:9
   |
LL |     { s.1.1e-1f32; }
   |         ^^^^^^^^^

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `1.1e-1f32`
  --> $DIR/float-field.rs:89:9
   |
LL |     { s.1.1e-1f32; }
   |         ^^^^^^^^^ expected one of `.`, `;`, `?`, `}`, or an operator

error[E0609]: no field `1e1` on type `S`
  --> $DIR/float-field.rs:6:9
   |
LL |     { s.1e1; }
   |         ^^^ unknown field
   |
   = note: available fields are: `0`, `1`

error[E0609]: no field `1e1` on type `(u8, u8)`
  --> $DIR/float-field.rs:12:11
   |
LL |     { s.1.1e1; }
   |           ^^^ unknown field

error[E0609]: no field `0x1e1` on type `S`
  --> $DIR/float-field.rs:34:9
   |
LL |     { s.0x1e1; }
   |         ^^^^^ unknown field
   |
   = note: available fields are: `0`, `1`

error[E0609]: no field `0x1` on type `S`
  --> $DIR/float-field.rs:36:9
   |
LL |     { s.0x1.; }
   |         ^^^ unknown field
   |
   = note: available fields are: `0`, `1`

error[E0609]: no field `0x1` on type `S`
  --> $DIR/float-field.rs:40:9
   |
LL |     { s.0x1.1; }
   |         ^^^ unknown field
   |
   = note: available fields are: `0`, `1`

error[E0609]: no field `0x1` on type `S`
  --> $DIR/float-field.rs:43:9
   |
LL |     { s.0x1.1e1; }
   |         ^^^ unknown field
   |
   = note: available fields are: `0`, `1`

error[E0609]: no field `0x1e` on type `S`
  --> $DIR/float-field.rs:50:9
   |
LL |     { s.0x1e+1; }
   |         ^^^^ unknown field
   |
   = note: available fields are: `0`, `1`

error[E0609]: no field `0x1e` on type `S`
  --> $DIR/float-field.rs:52:9
   |
LL |     { s.0x1e-1; }
   |         ^^^^ unknown field
   |
   = note: available fields are: `0`, `1`

error[E0609]: no field `1e1` on type `S`
  --> $DIR/float-field.rs:62:9
   |
LL |     { s.1e1f32; }
   |         ^^^^^^ unknown field
   |
   = note: available fields are: `0`, `1`

error[E0609]: no field `f32` on type `(u8, u8)`
  --> $DIR/float-field.rs:65:11
   |
LL |     { s.1.f32; }
   |           ^^^ unknown field

error[E0609]: no field `1e1` on type `(u8, u8)`
  --> $DIR/float-field.rs:69:9
   |
LL |     { s.1.1e1f32; }
   |         ^^^^^^^^ unknown field

error: aborting due to 55 previous errors

For more information about this error, try `rustc --explain E0609`.
